In browse tab, whenever we click or hit up/down, and page up/down keys, make sure the ps container is hovered and ps is focused so the the keydown event will be properly handled by ps. - In browse.js (line 664-677), create hoverAndFocusOnPS to mouse over   the ps container and focus on ps, this is the required action for ps   to handle the keydown event. - In browse.js (line 578-579), make sure slider won't scroll when the   up/down arrow keys are hit. - In opus.css (273-276), remove the highlighted border of perfect   scrollbar when it's focused.

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -270,6 +270,11 @@ so that both "Recent Announcements" and "Message" can be vertically aligned. */
     background-color: transparent !important;
 }
 
+/* remove the highlight border of ps when it's focus */
+.op-gallery-contents .ps__thumb-y:focus {
+    outline: none;
+}
+
 .op-metadata-detail-edit {
     margin-bottom: 0.5em;
     white-space: nowrap;
